--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="media-left">
           <p class="image is-128x128">
             <!-- replace with your profile image -->
-            <img src="https://bulma.io/images/placeholders/128x128.png">
+            <img src="https://raw.githubusercontent.com/mscfinance-big-data-viz/indiv-assignment-template/master/Visualization%20of%20cholera%20deaths.png">
           </p>
         </div>
 
