--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="media-content">
             <p>
               <!-- replace with your information -->
-              <strong>Full Name</strong>
+              <strong>Bennis Othmane</strong>
               <br/>
               Brief biography describing your interests and skills, a profile photo, and/or links to your Github, Linkedin, and other <strong>professional</strong> social media accounts.
               <br/>
