--- a/index.html
+++ b/index.html
@@ -79,16 +79,13 @@
 
       <p>
         Provide a brief discussion of how to interpret this visualization. Legends provided with the visualization can be self-explanatory, keep it short.
-     By combining the location of deaths related to cholera with locations of the water pumps, the map is able to show us that the majority were clustered around public water pump.
-the visualization show clearly a connection between location of water pump and the cluster of deaths (people was contaminated by public water).
       </p>
 
       <h3>Discussion</h3>
 
       <p>
         Provide a brief discussion of the key findings of the visualization, any challenges encountered creating the visualization etc.
-     I was pretty impressed about the power of folium module.
-The main challenge is to start using it, Once it's done, it becomes quickly a user friendly package with a really interesting items to visualize a map.
+     
       
       </p>
 
@@ -117,7 +114,7 @@ The main challenge is to start using it, Once it's done, it becomes quickly a us
         <div class="media-left">
           <p class="image is-128x128">
             <!-- replace with your profile image -->
-            <img src="https://raw.githubusercontent.com/mscfinance-big-data-viz/indiv-assignment-template/master/Visualization%20of%20cholera%20deaths.png">
+            <img src="https://raw.githubusercontent.com/mscfinance-big-data-viz/indiv-assignment-template/master/suicide_densityFR.png">
           </p>
         </div>
 
