--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Data Visualization Assignment
         </h1>
         <h2 class="subtitle">
-          Bennis Othmane
+          Student Name
         </h2>
       </div>
     </div>
