--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Data Visualization Assignment
         </h1>
         <h2 class="subtitle">
-          Student Name
+          Kenza FAHIM
         </h2>
       </div>
     </div>
@@ -76,13 +76,14 @@
       </svg>
 
       <h3>Interpretation</h3>
-
+ 
       <p>
-        Provide a brief discussion of how to interpret this visualization. Legends provided with the visualization can be self-explanatory, keep it short.
+        The plot here show an overview of the 10 systemic banks and their total capital over the past 5 years. it is the first step to do for analysing the importance of systematic bank stability. 
+      Systemik banks are systemically important financial institutions -SIFIs- whose failure or distress could potentially trigger a financial crisis or significantly disrupt the functioning of the financial system as a whole
       </p>
 
-      <h3>Discussion</h3>
-
+      In the graph, we can see that JP morgan has the highest total capital following by Bank of America and city group in the whole period (from 2020 to 2024). Their total capital has known some fluctuations in the first periods, but then it has increased in the last period. 
+As for Bnp paribas , it has also fluctuate similarly in the whole period. 
       <p>
         Provide a brief discussion of the key findings of the visualization, any challenges encountered creating the visualization etc.
      
@@ -90,13 +91,13 @@
       </p>
 
       <h3>Sources</h3>
-
+/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png
       <p>
 
 
 #output Visualization on the link
         
-      </p>
+      </p>/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png
     </div>
   </section>
 
@@ -113,14 +114,14 @@
       <div class="media">
         <div class="media-left">
           <p class="image is-128x128">
-            <!-- replace with your profile image -->
+            <!-- /Users/kenzafahim/Downloads/IMG_4705.jpg -->
             <img src="https://raw.githubusercontent.com/mscfinance-big-data-viz/indiv-assignment-template/master/suicide_densityFR.png">
           </p>
         </div>
 
         <div class="media-content">
             <p>
-              <!-- replace with your information -->
+              <!-- I am doing a master degree at neoma business school for the Finance & big Data master. I am passionate about data and finance, I am gaining more experience in the data field in order to put it into practice for financial analysis -->
               <strong>My name</strong>
               <br/>
               Brief biography describing your interests and skills, a profile photo, and/or links to your Github, Linkedin, and other <strong>professional</strong> social media accounts.
