--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <span>Visualization 1</span>
             </a>
           </div>
-
+/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png
           <div class="navbar-end">
             <a class="navbar-item" href="#about">
               <span class="icon">
@@ -82,13 +82,12 @@
       Systemik banks are systemically important financial institutions -SIFIs- whose failure or distress could potentially trigger a financial crisis or significantly disrupt the functioning of the financial system as a whole
       </p>
 
-      In the graph, we can see that JP morgan has the highest total capital following by Bank of America and city group in the whole period (from 2020 to 2024). Their total capital has known some fluctuations in the first periods, but then it has increased in the last period. 
-As for Bnp paribas , it has also fluctuate similarly in the whole period. 
       <p>
         Provide a brief discussion of the key findings of the visualization, any challenges encountered creating the visualization etc.
      
       
-      </p>
+      </p>In the graph, we can see that JP morgan has the highest total capital following by Bank of America and city group in the whole period (from 2020 to 2024). Their total capital has known some fluctuations in the first periods, but then it has increased in the last period. 
+As for Bnp paribas , it has also fluctuate similarly in the whole period. 
 
       <h3>Sources</h3>
 /Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png
@@ -122,9 +121,9 @@ As for Bnp paribas , it has also fluctuate similarly in the whole period.
         <div class="media-content">
             <p>
               <!-- I am doing a master degree at neoma business school for the Finance & big Data master. I am passionate about data and finance, I am gaining more experience in the data field in order to put it into practice for financial analysis -->
-              <strong>My name</strong>
+              <strong>Kenza FAHIM</strong>
               <br/>
-              Brief biography describing your interests and skills, a profile photo, and/or links to your Github, Linkedin, and other <strong>professional</strong> social media accounts.
+              linkedin.com/in/kenza-fahim-neomabs
               <br/>
               <!-- find brand icons at: https://fontawesome.com/icons?d=gallery&s=brands&m=free -->
               <a href="https://github.com/">
