--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
       </svg>
-
+<img src="/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png" alt="Visualization 1" style="width: 100%; max-width: 800px; height: auto; display: block; margin: 0 auto;">
       <h3>Interpretation</h3>
  
       <p>
