--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <span>Visualization 1</span>
             </a>
           </div>
-/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png
+
           <div class="navbar-end">
             <a class="navbar-item" href="#about">
               <span class="icon">
@@ -66,7 +66,7 @@
       </div>
     </div>
   </section>
-
+<!-- First Visualization Section -->
   <section class="section">
     <div class="container content">
       <!-- modify if necessary (move visualizations in separate pages) -->
@@ -74,7 +74,8 @@
 
       <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
       </svg>
-<img src="/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png" alt="Visualization 1" style="width: 100%; max-width: 800px; height: auto; display: block; margin: 0 auto;">
+<img src="/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png" 
+  alt="Visualization 1" style="width: 100%; max-width: 800px; height: auto; display: block; margin: 0 auto;">
       <h3>Interpretation</h3>
  
       <p>
@@ -90,7 +91,7 @@
 As for Bnp paribas , it has also fluctuate similarly in the whole period. 
 
       <h3>Sources</h3>
-/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png
+The data was gathered from Bloomberg platform 
       <p>
 
 
@@ -113,6 +114,7 @@ As for Bnp paribas , it has also fluctuate similarly in the whole period.
       <div class="media">
         <div class="media-left">
           <p class="image is-128x128">
+            <img src="/Users/kenzafahim/Downloads/IMG_4705.jpg"
             <!-- /Users/kenzafahim/Downloads/IMG_4705.jpg -->
             <img src="https://raw.githubusercontent.com/mscfinance-big-data-viz/indiv-assignment-template/master/suicide_densityFR.png">
           </p>
@@ -123,15 +125,16 @@ As for Bnp paribas , it has also fluctuate similarly in the whole period.
               <!-- I am doing a master degree at neoma business school for the Finance & big Data master. I am passionate about data and finance, I am gaining more experience in the data field in order to put it into practice for financial analysis -->
               <strong>Kenza FAHIM</strong>
               <br/>
-              linkedin.com/in/kenza-fahim-neomabs
+              I am doing a master degree at neoma business school for the Finance & big Data master. I am passionate about data and finance, I am gaining more experience in the data field in order to put it into practice for financial analysis 
+              
               <br/>
               <!-- find brand icons at: https://fontawesome.com/icons?d=gallery&s=brands&m=free -->
-              <a href="https://github.com/">
+              <a href="https://github.com/kfhm0">
                 <span class="fab fa-github"></span>
                 <span>Github</span>
               </a>
               &bullet;
-              <a href="https://www.linkedin.com/">
+              <a href="https://www.linkedin.com/in/kenza-fahim-neomabs">
                 <span class="fab fa-linkedin"></span>
                 <span>LinkedIn</span>
               </a>
