--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
       </svg>
 <img src="/Users/kenzafahim/Desktop/PGE NEOMA /Msc Finance & Big Data /Data VIZ/Data viz project/plot.png"
-  
+        <!-- Interpretation for the plot -->
       <h3>Interpretation</h3>
       <p>
         The plot here show an overview of the 10 systemic banks and their total capital over the past 5 years. it is the first step to do for analysing the importance of systematic bank stability. 
