--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <!-- Interpretation for the plot -->
       <h3>Interpretation</h3>
       <p>
-        The plot here show an overview of the 10 systemic banks and their total capital over the past 5 years. it is the first step to do for analysing the importance of systematic bank stability. 
-      Systemik banks are systemically important financial institutions -SIFIs- whose failure or distress could potentially trigger a financial crisis or significantly disrupt the functioning of the financial system as a whole
+        The plot here show an overview of the 10 systemic banks and their total capital over the past 5 years. it is the first step to do for analysing the importance of 'healthy ' systematic bank stability. This plot will help us to conclude that the Zscore is mainly influenced by the Total Capital of the Banks.
+      Systemik banks are systemically important financial institutions -GSIFIs- whose failure or distress could potentially trigger a financial crisis or significantly disrupt the functioning of the financial system as a whole
       </p>
 
       
@@ -87,6 +87,7 @@
      
       <p>In the graph, we can see that JP morgan has the highest total capital following by Bank of America and city group in the whole period (from 2020 to 2024). Their total capital has known some fluctuations in the first periods, but then it has increased in the last period. 
 As for Bnp paribas , it has also fluctuate similarly in the whole period. 
+        We can conclude from the graph, that all the banks share the same trend for the Z score, which means that there is a market trend globally. This is accurate because we are at the end of a covid crisis period and maybe because of the begining of some political issues around the world, so the market is behaving the same for all the systemic banks.
       </p>
 
       <h3>Sources</h3>
